--- a/styles/textfield.css
+++ b/styles/textfield.css
@@ -11,6 +11,7 @@
 }
 .textField_input {
     word-break: break-word;
+    resize: none;
     display: inline-block;
     outline: none;
     width: 100%;
